--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -14,4 +14,9 @@
     <button (click)="share(product)">
         Share
     </button>
+
+    <app-product-alerts
+        [product]="product"
+        (notify)="onNotify()">
+    </app-product-alerts>
 </div>
