Finished 'Managing Data' section

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -4,7 +4,7 @@
     <h3>
         <a
             [title]="product.name + 'details'"
-            [routerLink]="['products', productId]">
+            [routerLink]="['/products', productId]">
             {{ product.name }}
         </a>
     </h3>
